--- a/Styles/common.css
+++ b/Styles/common.css
@@ -9,6 +9,15 @@ body {
     background-color: aliceblue;
 }
 
+/*Menu Principal NAV BAR*/
+
+.navimg {
+    background-image: url(https://images.unsplash.com/photo-1619166719123-471cee9ce91e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
+    min-height: 70px;
+}
+
+
+
 /*Menu Principal Header*/
 
 
@@ -20,11 +29,11 @@ body {
 }
 
 .menuPrincipal {
-    background-color: lightgray;
+    
     list-style: none;
     margin: 0;
     padding: 0;
-    margin-top: 10px;
+    margin-top: 0px;
     font-family: "Mulish", sans-serif;
     font-weight: bold;
     font-size: 16px;
@@ -78,6 +87,7 @@ body {
 
 .headerRight {
     float: right;
+    margin-top: 10px;
     margin-right: 100px;
     width: 150px;
 }
