--- a/Styles/common.css
+++ b/Styles/common.css
@@ -14,6 +14,8 @@ body {
 .navimg {
     background-image: url(https://images.unsplash.com/photo-1619166719123-471cee9ce91e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
     min-height: 70px;
+    width: auto;
+    
 }
 
 
