--- a/Styles/contato.css
+++ b/Styles/contato.css
@@ -42,3 +42,10 @@
     margin-left: 10px;
     resize: none;
 }
+
+.imageGaleria {
+    width: 100%;
+    height: 500px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
