--- a/Styles/common.css
+++ b/Styles/common.css
@@ -3,13 +3,68 @@
     padding:0;
  }
  
+
+
+/*Responsive Logo Bazar Alphastudio*/
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .headerRight {
+    float: center;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 120px;
+    width: 50px;}
+  }
+  
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    .headerRight {
+    float: center;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 120px;
+    width: 50px;}
+  }
+  
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    .headerRight {
+    float: center;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 120px;
+    width: 50px;}
+  } 
+  
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+    .headerRight {
+    float: right;
+    margin-top: 10px;
+    margin-right: 100px;
+    width: 150px}
+  } 
+  
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) {
+    .headerRight {
+    float: right;
+    margin-top: 10px;
+    margin-right: 100px;
+    width: 150px}
+  }
+
+
+
 /*Background Color*/
 
 body {
     background-color: aliceblue;
 }
 
-/*Menu Principal NAV BAR*/
+/*Menu Principal NAV BAR Imagen*/
 
 .navimg {
     background-image: url(https://images.unsplash.com/photo-1619166719123-471cee9ce91e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
@@ -20,7 +75,7 @@ body {
 
 
 
-/*Menu Principal Header*/
+/*Menu Principal NAV BAR*/
 
 
 .menuprincipalGrid {
@@ -83,6 +138,8 @@ body {
 }
 
 
+/*Frase Slogan Bazar Alphastudio*/
+
 .headerleftGrid {
     display: grid;
     justify-content: start;
@@ -101,6 +158,8 @@ body {
     margin-left: 50px;
 }
 
+/*Logo Bazar Alphastudio*/
+
 .headerLogoGrid {
     
     margin-top: 10px;
@@ -108,20 +167,18 @@ body {
     width: 150px;
 }
 
-
-
-
-
+/*
 .headerRight {
     float: right;
     margin-top: 10px;
     margin-right: 100px;
     width: 150px;
 }
+*/
 
 
 
-
+  /*Titulo Principal*/
 
 .tituloPrincipalGridTextInicio {
     color: black;
