--- a/Styles/common.css
+++ b/Styles/common.css
@@ -5,10 +5,10 @@
  
 
 
-/*Responsive Logo Bazar Alphastudio*/
+/*Responsive common Bazar Alphastudio*/
 
 
-/* Extra small devices (phones, 600px and down) */
+/* Extra small devices */
 @media only screen and (max-width: 600px) {
     .headerRight {
     float: center;
@@ -16,9 +16,51 @@
     margin-right: 10px;
     margin-left: 120px;
     width: 50px;}
+
+    .tituloPrincipalGridTextInicio {
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 40px;
+        font-weight: bold;
+        margin-bottom: 20px;
+        text-shadow: 2px 2px 5px blue;
+    }
+
+    .tituloPrincipalGrid {
+            display: grid;
+            align-items: center;
+            justify-content: center;
+    }
+
+    .tituloPrincipal2 {
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 30px;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 40px;
+        text-shadow: 2px 2px 5px blue;
+    }
+
+
+    .tituloPrincipalGridText {
+        grid-column-start: 1;
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 30px;
+        font-weight: bold;
+        margin-bottom: 40px;
+        text-shadow: 2px 2px 5px blue;
+        
+    }
+
+
+
   }
   
-  /* Small devices (portrait tablets and large phones, 600px and up) */
+
+
+  /* Small devices */
   @media only screen and (min-width: 600px) {
     .headerRight {
     float: center;
@@ -26,9 +68,51 @@
     margin-right: 10px;
     margin-left: 120px;
     width: 50px;}
+
+    .tituloPrincipalGridTextInicio {
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 40px;
+        font-weight: bold;
+        margin-bottom: 20px;
+        text-shadow: 2px 2px 5px blue;
+    }
+
+    .tituloPrincipalGrid {
+            display: grid;
+            align-items: center;
+            justify-content: center;
+    }
+
+
+    .tituloPrincipal2 {
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 30px;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 40px;
+        text-shadow: 2px 2px 5px blue;
+    }
+
+
+    .tituloPrincipalGridText {
+        grid-column-start: 1;
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 30px;
+        font-weight: bold;
+        margin-bottom: 40px;
+        text-shadow: 2px 2px 5px blue;
+        
+    }
+
+
   }
   
-  /* Medium devices (landscape tablets, 768px and up) */
+
+
+  /* Medium devices */
   @media only screen and (min-width: 768px) {
     .headerRight {
     float: center;
@@ -36,25 +120,157 @@
     margin-right: 10px;
     margin-left: 120px;
     width: 50px;}
+
+
+    .tituloPrincipalGridTextInicio {
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 40px;
+        font-weight: bold;
+        margin-bottom: 20px;
+        text-shadow: 2px 2px 5px blue;
+    }
+
+    .tituloPrincipalGrid {
+            display: grid;
+            align-items: center;
+            justify-content: center;
+    }
+
+
+    .tituloPrincipal2 {
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 30px;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 40px;
+        text-shadow: 2px 2px 5px blue;
+    }
+
+
+    .tituloPrincipalGridText {
+        grid-column-start: 1;
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 30px;
+        font-weight: bold;
+        margin-bottom: 40px;
+        text-shadow: 2px 2px 5px blue;
+        
+    }
+
+
   } 
   
-  /* Large devices (laptops/desktops, 992px and up) */
+
+
+  /* Large devices */
   @media only screen and (min-width: 992px) {
     .headerRight {
     float: right;
     margin-top: 10px;
     margin-right: 100px;
     width: 150px}
+
+    .tituloPrincipalGridTextInicio {
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 70px;
+        font-weight: bold;
+        margin-bottom: 20px;
+        text-shadow: 2px 2px 5px blue;
+    }
+
+    .tituloPrincipalGrid {
+            display: grid;
+            align-items: center;
+            justify-content: center;
+    }
+
+
+    .tituloPrincipal2 {
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 50px;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 40px;
+        text-shadow: 2px 2px 5px blue;
+    }
+
+
+    .tituloPrincipalGridText {
+        grid-column-start: 1;
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 50px;
+        font-weight: bold;
+        margin-bottom: 40px;
+        text-shadow: 2px 2px 5px blue;
+        
+    }
+
+
+
   } 
   
-  /* Extra large devices (large laptops and desktops, 1200px and up) */
+
+
+
+  /* Extra large devices */
   @media only screen and (min-width: 1200px) {
     .headerRight {
     float: right;
     margin-top: 10px;
     margin-right: 100px;
     width: 150px}
+
+
+    .tituloPrincipalGridTextInicio {
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 70px;
+        font-weight: bold;
+        margin-bottom: 20px;
+        text-shadow: 2px 2px 5px blue;
+    }
+
+    .tituloPrincipalGrid {
+            display: grid;
+            align-items: center;
+            justify-content: center;
+    }
+
+
+    .tituloPrincipal2 {
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 50px;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 40px;
+        text-shadow: 2px 2px 5px blue;
+    }
+
+
+    .tituloPrincipalGridText {
+        grid-column-start: 1;
+        color: black;
+        font-family: "Mulish", sans-serif;
+        font-size: 50px;
+        font-weight: bold;
+        margin-bottom: 40px;
+        text-shadow: 2px 2px 5px blue;
+        
+    }
+
+
   }
+
+
+ 
+
 
 
 
@@ -158,7 +374,7 @@ body {
     margin-left: 50px;
 }
 
-/*Logo Bazar Alphastudio*/
+/*Logo Bazar Alphastudio
 
 .headerLogoGrid {
     
@@ -166,6 +382,7 @@ body {
     margin-right: 100px;
     width: 150px;
 }
+*/
 
 /*
 .headerRight {
@@ -178,7 +395,7 @@ body {
 
 
 
-  /*Titulo Principal*/
+  /*Titulo Principal
 
 .tituloPrincipalGridTextInicio {
     color: black;
@@ -188,7 +405,9 @@ body {
     margin-bottom: 20px;
     text-shadow: 2px 2px 5px blue;
 }
+*/
 
+/*
 .tituloPrincipal2 {
     color: black;
     font-family: "Mulish", sans-serif;
@@ -198,14 +417,17 @@ body {
     margin-bottom: 40px;
     text-shadow: 2px 2px 5px blue;
 }
+*/
 
-
+/*
 .tituloPrincipalGrid {
     display: grid;
     align-items: center;
     justify-content: center;
 }
+*/
 
+/*
 .tituloPrincipalGridText {
     grid-column-start: 1;
     color: black;
@@ -216,7 +438,7 @@ body {
     text-shadow: 2px 2px 5px blue;
     
 }
-
+*/
 
 
 
