--- a/Styles/common.css
+++ b/Styles/common.css
@@ -55,6 +55,41 @@
     }
 
 
+/*Menu Principal NAV BAR*/
+
+
+.menuprincipalGrid {
+    display: grid;
+    grid-template-columns: 100px 100px 100px 100px 100px ;
+
+
+}
+
+.menuPrincipal {
+    
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 0px;
+    font-family: "Mulish", sans-serif;
+    font-weight: bold;
+    font-size: 8px;
+}
+
+.menuPrincipal a {
+   
+    text-align: center;
+    width: 70px;
+    margin-left: 2px;
+    margin-right: 2px;
+    background-color: blue;
+    text-decoration: none;
+    padding: 8px 16px;
+    color: white;
+    border-radius: 8px;
+}
+
+
 
   }
   
@@ -106,6 +141,42 @@
         text-shadow: 2px 2px 5px blue;
         
     }
+
+
+/*Menu Principal NAV BAR*/
+
+
+.menuprincipalGrid {
+    display: grid;
+    grid-template-columns: 100px 100px 100px 100px 100px ;
+
+
+}
+
+.menuPrincipal {
+    
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 0px;
+    font-family: "Mulish", sans-serif;
+    font-weight: bold;
+    font-size: 8px;
+}
+
+.menuPrincipal a {
+   
+    text-align: center;
+    width: 70px;
+    margin-left: 2px;
+    margin-right: 2px;
+    background-color: blue;
+    text-decoration: none;
+    padding: 8px 16px;
+    color: white;
+    border-radius: 8px;
+}
+
 
 
   }
@@ -161,6 +232,44 @@
     }
 
 
+
+
+/*Menu Principal NAV BAR*/
+
+
+.menuprincipalGrid {
+    display: grid;
+    grid-template-columns: 100px 100px 100px 100px 100px ;
+
+
+}
+
+.menuPrincipal {
+    
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 0px;
+    font-family: "Mulish", sans-serif;
+    font-weight: bold;
+    font-size: 8px;
+}
+
+.menuPrincipal a {
+   
+    text-align: center;
+    width: 70px;
+    margin-left: 2px;
+    margin-right: 2px;
+    background-color: blue;
+    text-decoration: none;
+    padding: 8px 16px;
+    color: white;
+    border-radius: 8px;
+}
+
+
+
   } 
   
 
@@ -213,10 +322,47 @@
 
 
 
+
+/*Menu Principal NAV BAR*/
+
+
+.menuprincipalGrid {
+    display: grid;
+    grid-template-columns: 150px 150px 150px 150px 150px ;
+
+
+}
+
+.menuPrincipal {
+    
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 0px;
+    font-family: "Mulish", sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.menuPrincipal a {
+   
+    text-align: center;
+    width: 120px;
+    margin-left: 2px;
+    margin-right: 2px;
+    background-color: blue;
+    text-decoration: none;
+    padding: 8px 16px;
+    color: white;
+    border-radius: 8px;
+}
+
+
+
   } 
+
+
   
-
-
 
   /* Extra large devices */
   @media only screen and (min-width: 1200px) {
@@ -266,28 +412,7 @@
     }
 
 
-  }
 
-
- 
-
-
-
-
-/*Background Color*/
-
-body {
-    background-color: aliceblue;
-}
-
-/*Menu Principal NAV BAR Imagen*/
-
-.navimg {
-    background-image: url(https://images.unsplash.com/photo-1619166719123-471cee9ce91e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
-    min-height: 70px;
-    width: 100%;
-    
-}
 
 
 
@@ -296,7 +421,7 @@ body {
 
 .menuprincipalGrid {
     display: grid;
-    grid-template-columns: 150px 150px 150px 150px 150px;
+    grid-template-columns: 150px 150px 150px 150px 150px ;
 
 
 }
@@ -324,6 +449,75 @@ body {
     color: white;
     border-radius: 8px;
 }
+
+
+
+
+
+  }
+
+
+ 
+
+
+
+
+/*Background Color*/
+
+body {
+    background-color: aliceblue;
+}
+
+/*Menu Principal NAV BAR Imagen*/
+
+
+.navimg {
+    background-image: url(https://images.unsplash.com/photo-1619166719123-471cee9ce91e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
+    min-height: 70px;
+    width: 100%;
+    
+}
+
+
+
+/*Menu Principal NAV BAR
+
+
+.menuprincipalGrid {
+    display: grid;
+    grid-template-columns: 150px 150px 150px 150px 150px ;
+
+
+}
+
+.menuPrincipal {
+    
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 0px;
+    font-family: "Mulish", sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.menuPrincipal a {
+   
+    text-align: center;
+    width: 120px;
+    margin-left: 2px;
+    margin-right: 2px;
+    background-color: blue;
+    text-decoration: none;
+    padding: 8px 16px;
+    color: white;
+    border-radius: 8px;
+}
+
+*/
+
+
+
 .menuPrincipal a:hover {
     color: black;
 }
