--- a/Styles/common.css
+++ b/Styles/common.css
@@ -568,76 +568,11 @@ body {
     margin-left: 50px;
 }
 
-/*Logo Bazar Alphastudio
-
-.headerLogoGrid {
-    
-    margin-top: 10px;
-    margin-right: 100px;
-    width: 150px;
-}
-*/
-
-/*
-.headerRight {
-    float: right;
-    margin-top: 10px;
-    margin-right: 100px;
-    width: 150px;
-}
-*/
-
-
-
-  /*Titulo Principal
-
-.tituloPrincipalGridTextInicio {
-    color: black;
-    font-family: "Mulish", sans-serif;
-    font-size: 70px;
-    font-weight: bold;
-    margin-bottom: 20px;
-    text-shadow: 2px 2px 5px blue;
-}
-*/
-
-/*
-.tituloPrincipal2 {
-    color: black;
-    font-family: "Mulish", sans-serif;
-    font-size: 50px;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 40px;
-    text-shadow: 2px 2px 5px blue;
-}
-*/
-
-/*
-.tituloPrincipalGrid {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-}
-*/
-
-/*
-.tituloPrincipalGridText {
-    grid-column-start: 1;
-    color: black;
-    font-family: "Mulish", sans-serif;
-    font-size: 50px;
-    font-weight: bold;
-    margin-bottom: 40px;
-    text-shadow: 2px 2px 5px blue;
-    
-}
-*/
 
 
 
 
-/*Footer*/
+/*Footer
 
 .footerGrid {
     display: grid;
@@ -682,3 +617,64 @@ body {
     color: white;
     padding-top: 10px;
 }
+*/
+
+.footer-basic {
+    padding:40px 0;
+    background-color:#ffffff;
+    color:#4b4c4d;
+  }
+  
+  .footer-basic ul {
+    padding:0;
+    list-style:none;
+    text-align:center;
+    font-size:18px;
+    line-height:1.6;
+    margin-bottom:0;
+  }
+  
+  .footer-basic li {
+    padding:0 10px;
+  }
+  
+  .footer-basic ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+  }
+  
+  .footer-basic ul a:hover {
+    opacity:1;
+  }
+  
+  .footer-basic .social {
+    text-align:center;
+    padding-bottom:25px;
+  }
+  
+  .footer-basic .social > a {
+    font-size:24px;
+    width:40px;
+    height:40px;
+    line-height:40px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    border:1px solid #ccc;
+    margin:0 8px;
+    color:inherit;
+    opacity:0.9;
+  }
+  
+  .footer-basic .social > a:hover {
+    opacity:0.9;
+  }
+  
+  .footer-basic .copyright {
+    margin-top:15px;
+    text-align:center;
+    font-size:13px;
+    color:#aaa;
+    margin-bottom:0;
+  }
