--- a/CSS/commonscss.css
+++ b/CSS/commonscss.css
@@ -354,7 +354,8 @@ body {
   width: 65px;
   text-align: center;
   text-decoration: none;
-  margin: 20px 20px; }
+  margin: 20px 20px;
+  text-shadow: 4px 4px 9px black; }
 
 .fa:hover {
   opacity: 0.7; }
@@ -362,28 +363,32 @@ body {
 /* Facebook */
 .fa-facebook {
   background: #3B5998;
-  color: white; }
+  color: white;
+  text-shadow: 4px 4px 9px black; }
 
 /* Twitter */
 .fa-twitter {
   background: #55ACEE;
-  color: white; }
+  color: white;
+  text-shadow: 4px 4px 9px black; }
 
 /*Instagram*/
 .fa-instagram {
   background: red;
-  color: white; }
+  color: white;
+  text-shadow: 4px 4px 9px black; }
 
 /*Snapchat*/
 .fa-snapchat-ghost {
   background: #fffc00;
   color: white;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; }
+  text-shadow: 4px 4px 9px black; }
 
 .footer-basic {
   margin-top: 50px;
   padding: 40px 0;
-  color: white; }
+  color: black;
+  text-shadow: 2px 2px 5px blue; }
 
 .footer-basic ul {
   font-family: "Mulish", sans-serif;
@@ -418,6 +423,7 @@ body {
   margin-top: 15px;
   font-weight: bold;
   text-align: center;
-  font-size: 18px;
-  color: black;
+  font-size: 16px;
+  color: white;
+  text-shadow: 4px 4px 9px black;
   margin-bottom: 0; }
