--- a/SCSS/produtosscss.scss
+++ b/SCSS/produtosscss.scss
@@ -1,3 +1,10 @@
+/*Variables*/
+$my-FontFamily: 'Mulish', sans-serif;
+$color-Background: aliceblue;
+
+
+
+
 * {
     Margin:0;
     padding:0;
@@ -19,11 +26,11 @@
 
 
 .ofertas {
-    background-color: aliceblue;
+    background-color: $color-Background;
     margin: auto;
     width: 40%;
     padding: 10px;
-    font-family: "Mulish", sans-serif;
+    font-family: $my-FontFamily;
 }
 
 table, th, td {
@@ -52,7 +59,7 @@ h2 {
     margin-top: 20px;
     margin-bottom: 20px;
     text-align: center;
-    font-family: "Mulish", sans-serif;
+    font-family: $my-FontFamily;
     text-shadow: 2px 2px 5px blue;
 }
 
@@ -66,6 +73,6 @@ h2 {
 .buttonCompra {
     grid-column-start: 3;
     padding: 10px 24px;
-    font-family: "Mulish", sans-serif;
+    font-family: $my-FontFamily;
     background-color: lightblue;
 }
