--- a/CSS/novidadesscss.css
+++ b/CSS/novidadesscss.css
@@ -1,3 +1,4 @@
+/*Variables*/
 * {
   Margin: 0;
   padding: 0; }
@@ -67,16 +68,6 @@ h2 {
   width: 500px;
   padding: 20px; }
 
-/*
-.flexSectionNovedades {
-    display: flex;
-    height: auto;
-    justify-content: space-around;
-    flex-direction: row;
-    margin-bottom: 50px;
-    
-}
-*/
 .novedades {
   background-color: aliceblue;
   width: 40%; }
