--- a/SCSS/commonscss.scss
+++ b/SCSS/commonscss.scss
@@ -4,6 +4,7 @@ $color-Background: aliceblue;
 $shadow-Text:  2px 2px 5px blue;
 $my-font-weight: bold;
 $titulo-principal-fontsize: 70px;
+$menu-principal-background-color: rgb(18, 112, 235);
 
 * {
     Margin:0;
@@ -89,7 +90,7 @@ $titulo-principal-fontsize: 70px;
     width: 70px;
     margin-left: 2px;
     margin-right: 2px;
-    background-color: blue;
+    background-color: $menu-principal-background-color;
     text-decoration: none;
     padding: 8px 16px;
     color: white;
@@ -177,7 +178,7 @@ $titulo-principal-fontsize: 70px;
     width: 70px;
     margin-left: 2px;
     margin-right: 2px;
-    background-color: blue;
+    background-color: $menu-principal-background-color;
     text-decoration: none;
     padding: 8px 16px;
     color: white;
@@ -268,7 +269,7 @@ $titulo-principal-fontsize: 70px;
     width: 70px;
     margin-left: 2px;
     margin-right: 2px;
-    background-color: blue;
+    background-color: $menu-principal-background-color;
     text-decoration: none;
     padding: 8px 16px;
     color: white;
@@ -357,7 +358,7 @@ $titulo-principal-fontsize: 70px;
     width: 120px;
     margin-left: 2px;
     margin-right: 2px;
-    background-color: blue;
+    background-color: $menu-principal-background-color;
     text-decoration: none;
     padding: 8px 16px;
     color: white;
@@ -450,7 +451,7 @@ $titulo-principal-fontsize: 70px;
     width: 120px;
     margin-left: 2px;
     margin-right: 2px;
-    background-color: blue;
+    background-color: $menu-principal-background-color;
     text-decoration: none;
     padding: 8px 16px;
     color: white;
@@ -479,7 +480,8 @@ body {
 
 
 .navimg {
-    background-image: url(https://images.unsplash.com/photo-1619166719123-471cee9ce91e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
+    /*background-image: url(https://images.unsplash.com/photo-1619166719123-471cee9ce91e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);*/
+    background-image: url(https://images.unsplash.com/photo-1531265726475-52ad60219627?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=768&q=80);
     min-height: 70px;
     width: 100%;
     
