--- a/SCSS/inicioscss.scss
+++ b/SCSS/inicioscss.scss
@@ -16,6 +16,7 @@ $color-Background: aliceblue;
 .imagenCarousel {
     margin-top: 30px;
     margin-bottom: 50px;
+    width: 100%;
    
 }
 
@@ -32,7 +33,7 @@ $color-Background: aliceblue;
 
 
 .imagenOferta {
-    width: 350px; 
+    width: 2000px; 
     height: 500px;
     margin-left: auto;
     margin-right: auto;
@@ -51,12 +52,19 @@ $color-Background: aliceblue;
     font-family: $my-FontFamily;
 }
 
+
+
+
+
 table, th, td {
     padding: 3px;
     border: 1px solid black;
     border-collapse: collapse;
     text-align: center;
     text-decoration: none;
+    overflow: hidden
+    
+    
     
 }
 
@@ -77,7 +85,7 @@ h2 {
     width: 100%;
     text-align: center;
     
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 20px;
     font-family: $my-FontFamily;
     text-shadow: 2px 2px 5px blue;
@@ -125,7 +133,7 @@ h2 {
     align-items: center;
     justify-content: center;
     grid-column-gap: 100px;
-    
+    width: 300px;
 
 }
 
@@ -138,17 +146,23 @@ h2 {
 .flyerGrid2 {
     grid-column-start: 2;
 }
-    
+ 
+.flyerGrid3 {
+    grid-column-start: 2;
+}
 
 .imageFlyer {
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-left: 100px;
+    margin-left: 50px;
     width: 300px;
 }
 
-
-
+.imagePromoVerano {
+   
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 /*Logo Whatsapp*/
