--- a/CSS/inicioscss.css
+++ b/CSS/inicioscss.css
@@ -17,7 +17,7 @@
 
 /*Ofertas de la semana*/
 .imagenOferta {
-  width: 2000px;
+  width: 350px;
   height: 500px;
   margin-left: auto;
   margin-right: auto; }
@@ -34,8 +34,7 @@ table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
   text-align: center;
-  text-decoration: none;
-  overflow: hidden; }
+  text-decoration: none; }
 
 th {
   background-color: blue;
@@ -49,9 +48,9 @@ h3 {
 h2 {
   background-image: linear-gradient(to right, blue, lightgray, aliceblue, lightgray, blue);
   width: 100%;
-  text-align: center;
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 20px;
+  text-align: center;
   font-family: "Mulish", sans-serif;
   text-shadow: 2px 2px 5px blue; }
 
@@ -106,8 +105,7 @@ h2 {
   width: 300px; }
 
 .imagePromoVerano {
-  margin-left: auto;
-  margin-right: auto; }
+  margin-bottom: 40px; }
 
 /*Logo Whatsapp*/
 .logoWhatsapp {
