--- a/CSS/produtosscss.css
+++ b/CSS/produtosscss.css
@@ -34,13 +34,25 @@ h3 {
   text-shadow: 2px 2px 5px blue; }
 
 h2 {
-  background-image: linear-gradient(to right, blue, lightgray, aliceblue, lightgray, blue);
+  background-image: linear-gradient(to right, #006eff, lightgray, aliceblue, lightgray, #006eff);
   width: 100%;
   margin-top: 20px;
   margin-bottom: 20px;
   text-align: center;
   font-family: "Mulish", sans-serif;
   text-shadow: 2px 2px 5px blue; }
+
+.card1 {
+  background-image: linear-gradient(to right, #006eff, lightgray, aliceblue, lightgray, #006eff);
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-family: "Mulish", sans-serif;
+  text-shadow: 2px 2px 5px blue;
+  border-style: none;
+  padding-top: 20px;
+  padding-bottom: 20px; }
 
 /*Boton Compra GRID*/
 .buttonCompraGrid {
