--- a/SCSS/contatoscss.scss
+++ b/SCSS/contatoscss.scss
@@ -14,7 +14,7 @@ $width: 100%;
 
 .contactForm {
     font-family: $my-FontFamily;
-    background-image: linear-gradient(to right,aliceblue, lightgray, blue, lightgray, aliceblue);
+    background-image: linear-gradient(to right,aliceblue, lightgray, rgb(0, 110, 255), lightgray, aliceblue);
     margin-top: 20px;
     margin-bottom: 50px;
    
