--- a/SCSS/inicioscss.scss
+++ b/SCSS/inicioscss.scss
@@ -77,7 +77,7 @@ h3 {
 }
 
 h2 {
-    background-image: linear-gradient(to right, blue, lightgray, aliceblue, lightgray, blue);
+    background-image: linear-gradient(to right, rgb(0, 110, 255), lightgray, aliceblue, lightgray, rgb(0, 110, 255));
     width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -87,7 +87,7 @@ h2 {
 }
 
 .h2S {
-    background-image: linear-gradient(to right, blue, lightgray, aliceblue );
+    background-image: linear-gradient(to right, rgb(0, 110, 255), lightgray, aliceblue );
     font-family: $my-FontFamily;
     text-align: center; 
     padding-top: 10px;
@@ -165,4 +165,18 @@ h2 {
     position: fixed;
     right: 10px;
     bottom: 10px;
+}
+
+
+.card1 {
+    background-image: linear-gradient(to right, rgb(0, 110, 255), lightgray, aliceblue, lightgray, rgb(0, 110, 255));
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: $my-FontFamily;
+    text-shadow: 2px 2px 5px blue;
+    border-style: none;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
