--- a/SCSS/novidadesscss.scss
+++ b/SCSS/novidadesscss.scss
@@ -24,6 +24,8 @@ $color-Background: aliceblue;
         justify-content: space-around;
         flex-direction: column;
         margin-bottom: 50px;
+        margin-top: 50px;
+        margin-left: 50px;
         
     }
 
@@ -42,6 +44,8 @@ $color-Background: aliceblue;
         justify-content: space-around;
         flex-direction: column;
         margin-bottom: 50px;
+        margin-top: 50px;
+        margin-left: 50px;
         
     }
 
@@ -59,6 +63,8 @@ $color-Background: aliceblue;
         justify-content: space-around;
         flex-direction: column;
         margin-bottom: 50px;
+        margin-top: 50px;
+        margin-left: 50px;
         
     }
 
@@ -77,6 +83,8 @@ $color-Background: aliceblue;
         justify-content: space-around;
         flex-direction: row;
         margin-bottom: 50px;
+        margin-top: 50px;
+        margin-left: 50px;
         
     }
 
@@ -97,6 +105,9 @@ $color-Background: aliceblue;
         justify-content: space-around;
         flex-direction: row;
         margin-bottom: 50px;
+        margin-top: 50px;
+        margin-left: 50px;
+       
         
     }
 
@@ -109,7 +120,7 @@ $color-Background: aliceblue;
 
 
  h2 {
-    background-image: linear-gradient(to right, blue, lightgray, aliceblue, lightgray, blue );
+    background-image: linear-gradient(to right, rgb(0, 110, 255), lightgray, aliceblue, lightgray, rgb(0, 110, 255) );
     width: 100%;
     text-align: center;
     
@@ -136,4 +147,16 @@ $color-Background: aliceblue;
 .novedades {
     background-color: $color-Background;
     width: 40%;
+}
+
+.card1 {
+  background-image: rgb(120, 175, 248);
+  /*background-image: linear-gradient(to right, rgb(149, 193, 252), lightgray, aliceblue, lightgray, rgb(149, 193, 252));*/
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-family: $my-FontFamily;
+  text-shadow: 1px 1px 1px rgb(0, 162, 255);
+  border-style: none;
 }
