--- a/SCSS/sobrenosscss.scss
+++ b/SCSS/sobrenosscss.scss
@@ -31,7 +31,7 @@ $color-Background: aliceblue;
 }
 
 .h2S {
-    background-image: linear-gradient(to right, blue, lightgray, aliceblue );
+    background-image: linear-gradient(to right, rgb(0, 110, 255), lightgray, aliceblue );
     font-family: $my-FontFamily;
     text-align: center; 
     padding-top: 10px;
